--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
                 <h3>Contact Me!</h3>
                 <p>Have any questions? Feel free to ask / inquire about anything (school, internships, etc). Hoping to be a resource and be of help in your journey in any way possible.</p>
                 <p>Similarly, please use this email directly if your message regards a NIL opportunity.</p>
-                <p><strong>Email:</strong> pranudhmarley@gmail.com</p>
+                <h3>Resume</h3>
+                <p>Download my resume <a href="path/to/your/resume.pdf" target="_blank">here</a>.</p>
             </div>
         </section>
 
