--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,17 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
+                <img src="https://i.ytimg.com/vi/NC0IRIJhFpI/sddefault.jpg" alt="Project 1">
+                <div class="project-info">
+                    <h3>"Amazon Clone - E-commerce Platform"</h3>
+                    <p>"Developed an Amazon clone website using replicating key features such as product listings, search 
+                        functionality, and a responsive user interface. Enhanced user experience with interactive elements and 
+                        implemented a clean, modern design to mimic the look and feel of the original platform.</p>
+                    <a href="https://pranudh.github.io/Amazonclone/">View Project</a>
+                    <a href="https://github.com/Pranudh/Amazonclone">View Source Code</a>
+                </div>
+            </div>
+            <div class="project">
                 <img src="https://www.shutterstock.com/image-photo/hand-holding-magnifying-glass-check-600nw-2319526211.jpg" alt="Project 1">
                 <div class="project-info">
                     <h3>"Real-Time Air Quality Monitoring Application"</h3>
