Updated project with latest changes

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <p>Have any questions? Feel free to ask / inquire about anything (school, internships, etc). Hoping to be a resource and be of help in your journey in any way possible.</p>
                 <p>Similarly, please use this email directly if your message regards a NIL opportunity.</p>
                 <h3>Resume</h3>
-                <p>Download my resume <a href="path/to/your/resume.pdf" target="_blank">here</a>.</p>
+                <p>Download my resume <a href="https://drive.google.com/file/d/1O4Ctqs87stbf65iBAJU7C1pT7uLawXua/view?usp=sharing" target="_blank">here</a>.</p>
             </div>
         </section>
 
