--- a/projects.html
+++ b/projects.html
@@ -25,14 +25,12 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <img src="https://i.ytimg.com/vi/NC0IRIJhFpI/sddefault.jpg" alt="Project 1">
+                <img src="https://i.ytimg.com/vi/0SYqrDhH1Dw/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCSP-whx-MCy_ZJ4l7SSWPT8lAmMg" alt="Project 1">
                 <div class="project-info">
-                    <h3>"Amazon Clone - E-commerce Platform"</h3>
-                    <p>"Developed an Amazon clone website using replicating key features such as product listings, search 
-                        functionality, and a responsive user interface. Enhanced user experience with interactive elements and 
-                        implemented a clean, modern design to mimic the look and feel of the original platform.</p>
-                    <a href="https://pranudh.github.io/Amazonclone/">View Project</a>
-                    <a href="https://github.com/Pranudh/Amazonclone">View Source Code</a>
+                    <h3>"A Journey of Temple Construction in Rangampeta"</h3>
+                    <p>"I've developed a website using HTML and CSS to provide detailed information about the newly constructing Lord Shiva temple in my village. The website includes information about the temple's infrastructure, such as its size, materials used, and unique features. It also addresses common funding-related queries, offering transparency and clarity about the financial aspects of the project. I hope this website serves as a valuable resource for the community and visitors alike."</p>
+                    <a href="https://pranudh.github.io/Temple-/">View Project</a>
+                    <a href="https://github.com/Pranudh/Temple-">View Source Code</a>
                 </div>
             </div>
             <div class="project">
